# SpGeMM-Project

./: .clang-format  CMakeLists.txt  README.md  omp_spgemm.cpp  spgemm.cpp
data/: README.md  a4.mtx  b19.mtx  b4.mtx
